# rs-icc-editor

./: Cargo.toml  index.html  rust-toolchain.toml
assets/: sw.js
src/: app.rs  main.rs
